--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
             </div>
           </div>
           <div class="delivery__media" aria-hidden="true">
-            <iframe style="border-radius: 20px;" src="https://yandex.ru/map-widget/v1/?um=constructor%3A385f875ed18dbe03872bf81d245faea235dfaeed817dd06ff467c483adf66e37&amp;source=constructor" width="586" height="372" frameborder="0"></iframe>
+            <iframe class="map" style="border-radius: 20px;" src="https://yandex.ru/map-widget/v1/?um=constructor%3A385f875ed18dbe03872bf81d245faea235dfaeed817dd06ff467c483adf66e37&amp;source=constructor" frameborder="0"></iframe>
             
           </div>
         </div>
