--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
           </article>
 
           <aside class="about__media" aria-label="Интерьер ресторана">
-            <img class="media" src="https://images.unsplash.com/photo-1529692236671-f1f6cf9683ba?auto=format&fit=crop&w=1400&q=80" alt="Элегантный интерьер ресторана" loading="lazy" />
-            <img class="media media--small" src="https://images.unsplash.com/photo-1550966871-3ed3cdb5ed0c?auto=format&fit=crop&w=1200&q=80" alt="Подача морепродуктов" loading="lazy" />
+            <img class="media" src="https://osminog-restomarket.ru/upload/6667898e-0d5b-8d72-03d5-63e385c7455c_image_c" alt="Элегантный интерьер ресторана" loading="lazy" />
+            <!-- <img class="media media--small" src="https://saratov.travel/upload/resize_cache/iblock/64b/400_400_1/gwttr98q36sbv2vkdnoqeaza55hvd322.jpg" alt="Подача морепродуктов" loading="lazy" /> -->
           </aside>
         </div>
       </div>
