--- a/index.html
+++ b/index.html
@@ -50,11 +50,6 @@
       <div class="container hero__inner">
         <div class="hero__content">
           <p class="hero__kicker">Саратов • ул. В.И. Чапаева, 58 • ул. имени М.Ю. Лермонтова, 37</p>
-          <!-- <h1 class="hero__title">Осьминог, как символ</h1>
-          <p class="hero__subtitle">Ресторан, где море встречается с искусством</p>
-          <p class="hero__text">
-            Авторская кухня с морепродуктами: свежайшие осьминоги, средиземноморские вкусы и русская смелость в деталях.
-          </p> -->
           <h1 class="hero__title">Осьминог, как символ</h1>
           <p class="hero__subtitle">Осьминог — ресторан, который первым в Саратове так масштабно открыл морскую кухню.</p>
           <p class="hero__text">
@@ -175,7 +170,7 @@
     </section>
 
     <!-- DISH GALLERY (menu gallery) -->
-    <section class="section">
+    <section class="section" id="dish-gallery">
       <div class="container">
         <div class="section__head">
           <h2 class="h2">Галерея меню</h2>
