--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           </p>
           <div class="hero__actions">
             <a class="btn btn--primary" href="javascript:void(0);" onclick="openDeliveryModal()">Заказать доставку</a>
-            <a class="btn btn--ghost" href="#menu">Позвонить нам</a>
+            <a class="btn btn--ghost" href="#menu">Забронировать стол</a>
           </div>
         </div>
       </div>
@@ -253,7 +253,7 @@
         <div class="container-title">
           <div class="section__head">
             <h2 class="h2">Галерея</h2>
-            <p class="lead">Интерьер, свет и атмосфера вечера у воды.</p>
+            <p class="lead">Интерьер, свет и атмосфера вечера.</p>
           </div>
           <div class="gallery-location__header">
             <h3 class="h3 gallery-location__title">Ресторан на ул. Чапаева</h3>
@@ -317,7 +317,7 @@
         <div class="delivery">
           <div class="delivery__content">
             <h2 class="h2">Доставка</h2>
-            <p class="lead">Заказывайте любимые блюда домой — быстро, аккуратно и с сохранением температуры.</p>
+            <p class="lead">Заказывайте любимые блюда домой!</p>
             <p>
               Мы бережно упаковываем морепродукты и горячие блюда, чтобы они приехали к вам такими же, как на кухне.
               Доставка доступна ежедневно с 12:00 до 23:30.
